# VoiceList

./: .gitignore  README.md  pyproject.toml
app/: agent.py  main.py  schemas.py  storage.py
docs/: dependencies-and-agents.md
static/: app.js  index.html  styles.css
tests/: test_api_e2e.py
